[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Controls/Controls.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 120 )

[node name="Controls" type="Node"]
script = ExtResource( 1 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( 50, 200 )
shape = SubResource( 1 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 150, 200 )
shape = SubResource( 1 )
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
